--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/uuid": "^3.4.6",
     "classnames": "^2.2.6",
+    "customize-cra": "^0.9.1",
     "framer-motion": "^1.6.18",
     "gh-pages": "^2.1.1",
     "lodash": "^4.17.15",
+    "mobx": "^5.15.1",
+    "mobx-react": "^6.1.4",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "^3.3.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
