--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/classnames": "^2.2.9",
+    "@types/emoji-mart": "^2.11.0",
     "@types/jest": "^24.0.0",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.0.0",
@@ -16,6 +17,7 @@
     "@types/uuid": "^3.4.6",
     "classnames": "^2.2.6",
     "customize-cra": "^0.9.1",
+    "emoji-mart": "^2.11.1",
     "framer-motion": "^1.6.18",
     "gh-pages": "^2.1.1",
     "lodash": "^4.17.15",
