--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/uuid": "^3.4.6",
     "classnames": "^2.2.6",
+    "csstype": "^2.6.8",
     "customize-cra": "^0.9.1",
     "emoji-mart": "^2.11.1",
     "framer-motion": "^1.6.18",
